不要なフォルダを削除

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /DestinationboardServer/Migrations
 /DestinationboardServer/obj
 /.vs/DestinationboardServer/v16
+/.vs/DestinationboardServer/DesignTimeBuild
