--- a/DestinationboardServer/DestinationboardServer.csproj
+++ b/DestinationboardServer/DestinationboardServer.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <Folder Include="Common\Communication\" />
+    <Folder Include="Common\DBManager\SQLite\Tables\" />
   </ItemGroup>
 
 </Project>
