コンソールログを出力するよう修正

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /DestinationboardServer/obj
 /.vs/DestinationboardServer/v16
 /.vs/DestinationboardServer/DesignTimeBuild
+/DestinationboardServer/bin/Release
