--- a/DestinationboardServer/DestinationboardServer.csproj
+++ b/DestinationboardServer/DestinationboardServer.csproj
@@ -3,20 +3,25 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <AssemblyVersion>0.0.0.1</AssemblyVersion>
-    <FileVersion>0.0.0.1</FileVersion>
+    <AssemblyVersion>0.0.0.2</AssemblyVersion>
+    <FileVersion>0.0.0.2</FileVersion>
     <Version>0.0.1</Version>
-    <PackageIcon>app-icon.png</PackageIcon>
+    <PackageIcon>app-icon.ico</PackageIcon>
+    <ApplicationIcon>Common\icon\app-icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Remove="Common\Comm\**" />
     <EmbeddedResource Remove="Common\Comm\**" />
     <None Remove="Common\Comm\**" />
-    <None Include="Common\icon\app-icon.png">
+    <Resource Include="Common\icon\app-icon.ico">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
-    </None>
+    </Resource>
+    <Resource Include="Common\icon\app-icon.ico">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
