--- a/DestinationboardServer/DestinationboardServer.csproj
+++ b/DestinationboardServer/DestinationboardServer.csproj
@@ -37,4 +37,10 @@
     <ProjectReference Include="..\..\DestinationboardCommunicationLibrary\DestinationboardCommunicationLibrary\DestinationboardCommunicationLibrary\DestinationboardCommunicationLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="log4net.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
