ログ保存機能を追加

--- a/DestinationboardServer/DestinationboardServer.csproj
+++ b/DestinationboardServer/DestinationboardServer.csproj
@@ -49,6 +49,9 @@
     <None Update="db\DestinationBoard.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="db\DestinationBoardLog.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="log4net.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
