インストーラを作成

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /.vs/DestinationBoardService
 /DestinationBoardService/bin/Debug/net5.0
 /DestinationBoardService/obj
+/DestinationboardServerInstaller/Release
+/DestinationboardServerInstaller/Debug
